src/test/resources/amyc/parser/failing/WrongQName2.amy
object WrongQName
  abstract class Foo.bar
end WrongQName
